--- a/client/src/styles/Review.css
+++ b/client/src/styles/Review.css
@@ -28,6 +28,8 @@
 .reviewBody .header {
   padding-top: 30px;
   margin-left: 10px;
+  background-color: white;
+  display: inline-block;
 }
 
 .reviewButtons {
