--- a/client/src/styles/ReviewForm.css
+++ b/client/src/styles/ReviewForm.css
@@ -64,3 +64,24 @@
 .rw-visible {
   display: block;
 }
+
+h3 {
+  font-size: 25px;
+}
+
+h5 {
+  font-size: 20px;
+  display: inline-block;
+  margin: 2px;
+  font-weight:normal;
+  vertical-align: top;
+  margin: 0 1px;
+}
+
+em {
+  font-weight: normal;
+}
+
+label {
+  font-weight: normal;
+}
