--- a/client/src/styles/Review.css
+++ b/client/src/styles/Review.css
@@ -10,6 +10,8 @@
 .reviewBody {
   width: 66.66%;
   display: inline-block;
+  font-weight: normal;
+  font-size: 20px
 }
 
 .username {
@@ -28,6 +30,11 @@
 .reviewBody .header {
   padding-top: 30px;
   margin-left: 10px;
+  background-color: white;
+  display:inline-block;
+}
+.reviewBody .header {
+ margin: 5px 0px;
 }
 
 .reviewButtons {
@@ -37,6 +44,6 @@
   border-radius: 4px;
   border: none;
   height: 30px;
-  margin-bottom: 4px;
+  margin: 30px 0;
   margin-right: 12px;
 }
